# do-cold-sync

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: release.yml
docs/assets/: .gitkeep
src/: main.rs
src/s3/: client.rs  mod.rs  signing.rs  types.rs
src/sync/: checkpoint.rs  inventory.rs  mod.rs
src/tui/: mod.rs
