[package]
name = "do-cold-sync"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Migrate DigitalOcean Spaces to Cold Storage"
repository = "https://github.com/myst3k/do-cold-sync"
readme = "README.md"
keywords = ["digitalocean", "spaces", "cold-storage", "s3", "migration"]
categories = ["command-line-utilities"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# HTTP / S3
reqwest = { version = "0.13", features = ["stream", "rustls", "json"] }
aws-sigv4 = "1"
aws-credential-types = "1"
quick-xml = "0.39"
percent-encoding = "2"
urlencoding = "2"
bytes = "1"

# TUI
ratatui = "0.30"
crossterm = "0.29"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Checkpoint / state
rocksdb = "0.24"

# Utilities
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.11"
hex = "0.4"
humansize = "2"
url = "2"
futures-util = "0.3"
